  * Take a patch for a stack alignment on sparc64 for rust
    Thanks to John Paul Adrian Glaubitz for the work (Closes: #880221)
  * Update of the clang description
  * Standards-Version updated to 4.1.1
  * Remove some old breaks/replaces/conflicts (<3.8)
  * Fix some wrong-section-according-to-package-name and
    priority-extra-is-replaced-by-priority-optional issues

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 30 Oct 2017 19:41:20 +0100

llvm-toolchain-4.0 (1:4.0.1-8) unstable; urgency=medium

  [ Ximin Luo ]
  * Backport some patches (originally from rust, and upstreamed) to fix two
    failing tests in rustc.

  [ Sylvestre Ledru ]
  * Try to fix the mipsel FTBFS (Closes: #877567)
    I am trying the first option from the bug:
    - gsplit-dward on 32 bits archs
    - -g everywhere
    Many thanks to Adrian Bunk for that

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 18 Oct 2017 16:37:25 +0200

llvm-toolchain-4.0 (1:4.0.1-7) unstable; urgency=medium

  * Force the deactivation of ocaml until the transition is done
  * Standards-Version: 4.1.0

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 13 Oct 2017 21:22:54 +0200

llvm-toolchain-4.0 (1:4.0.1-6) unstable; urgency=medium

  * Remove the -Wl option to call gold instead of the normal linker
    (Closes: #876787)
  * For now, lld doesn't generate shared libs. Removing the files
    (Closes: #857653)
  * Add the missing lldb symlinks (Closes: #872237)

  [ Gianfranco Costamagna ]
  * Fixup previous upload, adding -NDEBUG to build flags,
    lost in the -g -> -g1 switch

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 01 Oct 2017 15:24:14 +0200

llvm-toolchain-4.0 (1:4.0.1-5) unstable; urgency=medium

  * Backport of an arm patch for rust.
    https://bugs.llvm.org/show_bug.cgi?id=32379
    (Closes: #876072)

  [ Matthias Klose ]
  * Link with --no-keep-files-mapped --no-map-whole-files when using gold.
  * Fix sanitizer build failure with glibc-2.26.